--- a/index.html
+++ b/index.html
@@ -8,10 +8,26 @@
     <title>Bulletin</title>
   </head>
   <body>
-    <div class="navbar">
+    <nav>
+      <a class="active" href="#home">Home</a>
+      <a href="about.html">About</a>
+    </nav>
 
-    </div>
     <h1>Bulletin</h1>
+
+  <div class="">
+    <form>
+      <p>Bulletin: <br>
+        <textarea id="msg-box" placeholder="your bulletin"></textarea>
+      </p>
+        <input type="button" value="Add" onclick="postBulletin()">
+        <input type="button" value="Clear" onclick="clearMessageBox()">
+    </form>
+  </div>
+
+  <ul id="bulletins">
+
+  </ul>
 
   </body>
 </html>
