added content to About page

--- a/about.html
+++ b/about.html
@@ -8,10 +8,33 @@
     <title>Bulletin - About</title>
   </head>
   <body>
+
     <nav>
       <a href="index.html">Home</a>
       <a class="active" href="#about">About</a>
     </nav>
+
     <h1>About</h1>
+
+    <h2>The App</h2>
+
+    <p>Bulletin is the pen and paper list you know and love, online.</p>
+
+    <p>Add items, cross them out, and clear them when you're done.</p>
+
+    <p>No bells or whistles, just a clean interface to keep track of what's important. Simple.</p>
+
+
+    <h2>The Coder</h2>
+    <h3>Lorenzo Bisceglia</h3>
+    <img src="https://bit.ly/2W8zMAv" alt="">
+    <p>Hi! I'm Lorenzo. I'm a third year computer science student at UBC and aspiring software engineer.
+      My interests include graphic design, data science, food-related YouTube channels (shout-out
+      to Bon Appétit), and having my heart annually broken by the Vancouver Canucks.</p>
+
+    <p>Thanks for checking out my app! Hit the links below if you'd like to give me any feedback or get in touch.</p>
+
+    <!-- TODO: add links to other pages -->
+
   </body>
 </html>
