--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="assets/styles/styles.css">
     <script type="text/javascript" src="assets/scripts/main.js">
+//     function codeAddress() {
+//     alert('ok');
+// }
+// window.onload = codeAddress;
     </script>
     <title>Bulletin</title>
   </head>
+
   <body>
+
     <nav>
       <a class="active" href="#home">Home</a>
       <a href="about.html">About</a>
@@ -15,19 +22,19 @@
 
     <h1>Bulletin</h1>
 
-  <div class="">
-    <form>
-      <p>Bulletin: <br>
-        <textarea id="msg-box" placeholder="your bulletin"></textarea>
-      </p>
-        <input type="button" value="Add" onclick="postBulletin()">
-        <input type="button" value="Clear" onclick="clearMessageBox()">
-    </form>
-  </div>
+    <div class="">
+      <form>
+        <p>Bulletin: <br>
+          <textarea id="msg-box" placeholder="your bulletin"></textarea>
+        </p>
+          <input type="button" value="Add" onclick="postBulletin()">
+          <input type="button" value="Clear" onclick="clearMessageBox()">
+      </form>
+    </div>
 
-  <ul id="bulletins">
+    <ul id="bulletins">
 
-  </ul>
+    </ul>
 
   </body>
 </html>
