implemented default message list and clear all button

--- a/about.html
+++ b/about.html
@@ -3,38 +3,42 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="assets/styles/styles.css">
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <script type="text/javascript" src="assets/scripts/main.js">
     </script>
     <title>Bulletin - About</title>
   </head>
   <body>
 
-    <nav>
-      <a href="index.html">Home</a>
-      <a class="active" href="#about">About</a>
-    </nav>
+    <div class="">
+      <nav>
+        <a href="index.html">Home</a>
+        <a class="active" href="#about">About</a>
+      <nav>
+    </div>
 
-    <h1>About</h1>
+    <div class="">
+      <h1>About</h1>
 
-    <h2>The App</h2>
+      <h2>The App</h2>
 
-    <p>Bulletin is the pen and paper list you know and love, online.</p>
+      <p>Bulletin is the pen and paper list you know and love, online.</p>
+      <p>Add items, cross them out, and clear them when you're done.</p>
+      <p>No bells or whistles, just a clean interface to keep track of what's important. Simple.</p>
 
-    <p>Add items, cross them out, and clear them when you're done.</p>
+      <h2>The Coder</h2>
+      <h3>Lorenzo Bisceglia</h3>
+      <img src="https://bit.ly/2W8zMAv" alt="">
 
-    <p>No bells or whistles, just a clean interface to keep track of what's important. Simple.</p>
+      <p>Hi! I'm Lorenzo. I'm a third year computer science student at UBC and aspiring software engineer.
+        My interests include graphic design, data science, food-related YouTube channels (shout-out
+        to Bon Appétit), and having my heart annually broken by the Vancouver Canucks.</p>
 
+      <p>Thanks for checking out my app! Hit the links below if you'd like to give me any feedback
+        or get in touch.</p>
 
-    <h2>The Coder</h2>
-    <h3>Lorenzo Bisceglia</h3>
-    <img src="https://bit.ly/2W8zMAv" alt="">
-    <p>Hi! I'm Lorenzo. I'm a third year computer science student at UBC and aspiring software engineer.
-      My interests include graphic design, data science, food-related YouTube channels (shout-out
-      to Bon Appétit), and having my heart annually broken by the Vancouver Canucks.</p>
-
-    <p>Thanks for checking out my app! Hit the links below if you'd like to give me any feedback or get in touch.</p>
-
-    <!-- TODO: add links to other pages -->
+      <!-- TODO: add links to other pages -->
+    </div>
 
   </body>
 </html>
