--- a/about.html
+++ b/about.html
@@ -10,11 +10,9 @@
   </head>
   <body>
 
-    <div class="">
-      <nav>
-        <a href="index.html">Home</a>
-        <a class="active" href="#about">About</a>
-      <nav>
+    <div class="nav">
+      <a class = "active" href=index.html>Home</a>
+      <a href=about.html>About</a>
     </div>
 
     <div class="">
@@ -22,9 +20,10 @@
 
       <h2>The App</h2>
 
-      <p>Bulletin is the pen and paper list you know and love, online.</p>
-      <p>Add items, cross them out, and clear them when you're done.</p>
-      <p>No bells or whistles, just a clean interface to keep track of what's important. Simple.</p>
+      <p>Bulletin is the pen and paper list you know and love, online.
+        Add items, cross them out, and clear them when you're done.
+        No bells or whistles; just a clean interface to keep track of
+        what's important. Simple.</p>
 
       <h2>The Coder</h2>
       <h3>Lorenzo Bisceglia</h3>
