responsive design; bug discovered on ul word wrap

--- a/about.html
+++ b/about.html
@@ -6,24 +6,24 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <script type="text/javascript" src="assets/scripts/main.js">
     </script>
-    <title>Bulletin - About</title>
+    <title>JotDown - About</title>
   </head>
   <body>
 
     <div class="nav">
-      <a class = "active" href=index.html>Home</a>
-      <a href=about.html>About</a>
+      <a href=index.html>Home</a>
+      <a class = "active" href=about.html>About</a>
     </div>
 
-    <div class="">
+    <div class="flex-container">
       <h1>About</h1>
 
       <h2>The App</h2>
 
-      <p>Bulletin is the pen and paper list you know and love, online.
+      <p>JotDown is the pen and paper list you know and love, online.
         Add items, cross them out, and clear them when you're done.
-        No bells or whistles; just a clean interface to keep track of
-        what's important. Simple.</p>
+        There are no bells or whistles; just a clean interface to keep track of
+        what's important.</p>
 
       <h2>The Coder</h2>
       <h3>Lorenzo Bisceglia</h3>
@@ -33,8 +33,7 @@
         My interests include graphic design, data science, food-related YouTube channels (shout-out
         to Bon Appétit), and having my heart annually broken by the Vancouver Canucks.</p>
 
-      <p>Thanks for checking out my app! Hit the links below if you'd like to give me any feedback
-        or get in touch.</p>
+      <p>Thanks for checking out my app!</p>
 
       <!-- TODO: add links to other pages -->
     </div>
