--- a/about.html
+++ b/about.html
@@ -18,24 +18,34 @@
     <div class="flex-container">
       <h1>About</h1>
 
-      <h2>The App</h2>
+      <hr>
 
-      <p>JotDown is the pen and paper list you know and love, online.
-        Add items, cross them out, and clear them when you're done.
-        There are no bells or whistles; just a clean interface to keep track of
-        what's important.</p>
+      <div class="about">
+        <h2>The App</h2>
 
-      <h2>The Coder</h2>
-      <h3>Lorenzo Bisceglia</h3>
-      <img src="https://bit.ly/2W8zMAv" alt="">
+        <p>JotDown is the pen and paper list you know and love, online.
+          Add items, cross them out, and clear them when you're done.
+          There are no bells or whistles; just a clean interface to keep track of
+          what's important.</p>
 
-      <p>Hi! I'm Lorenzo. I'm a third year computer science student at UBC and aspiring software engineer.
-        My interests include graphic design, data science, food-related YouTube channels (shout-out
-        to Bon Appétit), and having my heart annually broken by the Vancouver Canucks.</p>
+        <p>JotDown was built from scratch using HTML, CSS, and JavaScript (no frameworks).</p>
 
-      <p>Thanks for checking out my app!</p>
+      </div>
 
-      <!-- TODO: add links to other pages -->
+      <hr>
+
+      <div class="about">
+        <h2>The Coder</h2>
+        <img src="https://bit.ly/2W8zMAv" alt="">
+        <h3>Lorenzo Bisceglia</h3>
+
+        <p>I'm a third year computer science student at UBC and aspiring software engineer.
+          My interests include graphic design, data science, food-related YouTube channels (shout-out
+          to Bon Appétit), and having my heart annually broken by the Vancouver Canucks.</p>
+
+        <p>This is my first project using HTML/CSS/JavaScript. Thanks for checking it out!</p>
+      </div>
+
     </div>
 
   </body>
