got individual clear buttons to work

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
       <div class="about">
         <h2>The App</h2>
 
-        <p>JotDown is the pen and paper list you know and love, online.
+        <p>JotDown is the pen and paper list you know and love.
           Add items, cross them out, and clear them when you're done.
           There are no bells or whistles; just a clean interface to keep track of
           what's important.</p>
