citations and credit attributions

--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
   </head>
   <body>
 
+    <!-- Nav Bar Tutorial Used for active CSS styling -->
     <div class="nav">
       <a href=index.html>Home</a>
       <a class = "active" href=about.html>About</a>
