--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
 
   <body>
+      <!-- Nav Bar Tutorial Used for active CSS styling -->
       <div class="nav">
         <a class = "active" href=index.html>Home</a>
         <a href=about.html>About</a>
@@ -20,6 +21,7 @@
         </div>
 
         <div>
+          <!-- Stack Overflow post used for submitting on Enter -->
           <textarea id="msg-box" placeholder="Jot something down..."
           onkeypress=submitOnEnter(event)></textarea>
         </div>
